# qlock

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
completions/: qlock.bash
src/: crypto_utils.rs  file_utils.rs  lib.rs  main.rs  metadata_manager.rs  qlock_errors.rs  word_lists.rs
tests/: common.rs  integration.rs
