[package]
name = "qlock"
version = "0.5.2"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
assert_cmd = "2.0.16"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tempfile = "3.16.0"
terminal_size = "0.4.1"
textwrap = "0.16.1"
walkdir = "2.5.0"
